--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,175 @@ body{
 .top-menu{
 	background:#164c95;
 	height:35px;
-	box-shadow: 0 8px 8px #103568 inset; 
+	box-shadow: 0 8px 8px #103568, 0 8px 8px #103568 inset;
 }
 .top-navbar{
 	height: 35px!important;
     padding: 0;
     margin: 0;
+	border: 0;
 }
+.left-top-menu {
+    color: #fff!important;
+    font-size: 14px;
+    height: 25px;
+    margin-top: 7px;
+    padding: 0!important;
+    background: url('../img/fire.png') no-repeat;
+    background-position-y: 0px;
+    padding-left: 30px!important;
+    padding-top: 2px!important;
+}
+
+.left-top-menu {
+	background: rgba(51, 122, 183, 0);
+}
+
+.navbar-nav .dropdown {
+    text-transform: uppercase;
+}
+.nav.navbar-nav {
+    margin-left: 50px;
+}
+
+/*верхнее выезжающее меню*/
+/*#ddmenu {
+  display: block;
+  width: 100%;
+  height: 80px;
+  margin: 0 auto;
+  padding: 0 15px;
+  background: #fff;
+  border-radius: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 1px rgba(20, 20, 20, 0.2);
+  cursor: pointer;
+  outline: none;
+  font-weight: bold;
+  color: #8aa8bd;
+}
+
+#ddmenu li { display: inline-block; font-size: 1.45em; text-shadow: 1px 1px 0 #fff; border-right: 1px solid #dae0e5; }
+*/
+#ddmenu {
+    width: 250px;
+	list-style:none;
+	overflow: hidden;
+}
+
+#ddmenu li a {
+  display: block;
+  float: left;
+  text-decoration: none;
+  /*padding: 0 12px;
+  line-height: 78px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #6c87c0;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;*/
+}
+
+#ddmenu li:hover{
+	background:#1a529e;
+}
+
+#ddmenu li:hover > a { color: #7180a0; /*background: #d9e2ee; */text-decoration:none;}
+
+#ddmenu ul {
+  position: absolute;
+  top: 35px;
+  left: 0;
+  width: 100%;
+  height:72px;
+  background: #2563b7;
+  display: none;
+  margin: 0;
+  padding: 7px 0;
+  list-style: none;
+  /*box-shadow: 0 8px 8px #103568 inset;*/
+  box-shadow: 0 8px 8px #103568, 0 8px 8px #103568 inset;
+}
+
+
+
+
+/*#ddmenu ul:after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: 100%;
+  left: 8px;
+  border-width: 0 8px 8px 8px;
+  border-style: solid;
+  border-color: #fff transparent; 
+}
+
+#ddmenu ul:before {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: 100%;
+  left: 4px;
+  border-width: 0 10px 10px 10px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1) transparent;  
+}*/
+
+#ddmenu ul li { 
+  display: inline-block; 
+  width: 22%; 
+  float:left;
+  font-size:13px;
+  /*border-right:1px solid #124b99;*/
+  height:60px;
+  padding:5px 8px;
+  margin-left:7px;
+  margin-right:7px;
+}
+
+#ddmenu ul li.separ {
+	width:2px!important;
+	height:55px;
+	background:#124b99;
+	margin:0;
+	padding:0;
+}
+
+#ddmenu ul li a{
+	 color:#fff;
+	 display:inline-block;
+	 background: url('../img/fire-sub.png') no-repeat;
+	 padding-left:35px!important;
+} 
+
+#ddmenu ul li a {
+  display: block;
+  width: 100%;
+  height:55px;
+  padding: 6px 7px;
+  line-height: 1.4em;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+#ddmenu ul li:hover {
+ background: rgba(51, 122, 183, 0);
+ background:#1a529e;
+}
+.but-close{
+	background: url('../img/close-menu.png') no-repeat;
+    width: 100px;
+    float: right;
+    height: 25px;
+    border: none;
+    margin-top: 9px;
+    margin-right: 0!important;
+	z-index:-1;
+}
+/*верхнее выезжающее меню*/
