--- a/css/style.css
+++ b/css/style.css
@@ -110,25 +110,25 @@ body{
     margin-left: 50px;
 }
 
-/*верхнее выезжающее меню*/
-/*#ddmenu {
-  display: block;
-  width: 100%;
-  height: 80px;
-  margin: 0 auto;
-  padding: 0 15px;
-  background: #fff;
-  border-radius: 6px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  box-shadow: 0 1px 1px rgba(20, 20, 20, 0.2);
-  cursor: pointer;
-  outline: none;
-  font-weight: bold;
-  color: #8aa8bd;
+.right-top-menu {
+    display: inline-block;
+    float: right;
+    margin-top: -32px;
 }
 
-#ddmenu li { display: inline-block; font-size: 1.45em; text-shadow: 1px 1px 0 #fff; border-right: 1px solid #dae0e5; }
-*/
+.right-top-menu li {
+    display: inline;
+    text-transform: uppercase;   
+    margin-right: 15px;
+    font-size: 13px;
+}
+
+.right-top-menu a {
+	color: #fff;
+	text-decoration:none;
+}
+
+/*верхнее выезжающее меню*/
 #ddmenu {
     width: 250px;
 	list-style:none;
@@ -139,15 +139,6 @@ body{
   display: block;
   float: left;
   text-decoration: none;
-  /*padding: 0 12px;
-  line-height: 78px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #6c87c0;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;*/
 }
 
 #ddmenu li:hover{
@@ -167,43 +158,14 @@ body{
   margin: 0;
   padding: 7px 0;
   list-style: none;
-  /*box-shadow: 0 8px 8px #103568 inset;*/
   box-shadow: 0 8px 8px #103568, 0 8px 8px #103568 inset;
 }
 
-
-
-
-/*#ddmenu ul:after {
-  content: "";
-  width: 0;
-  height: 0;
-  position: absolute;
-  bottom: 100%;
-  left: 8px;
-  border-width: 0 8px 8px 8px;
-  border-style: solid;
-  border-color: #fff transparent; 
-}
-
-#ddmenu ul:before {
-  content: "";
-  width: 0;
-  height: 0;
-  position: absolute;
-  bottom: 100%;
-  left: 4px;
-  border-width: 0 10px 10px 10px;
-  border-style: solid;
-  border-color: rgba(0, 0, 0, 0.1) transparent;  
-}*/
-
 #ddmenu ul li { 
   display: inline-block; 
-  width: 22%; 
+  width: 23.5%; 
   float:left;
   font-size:13px;
-  /*border-right:1px solid #124b99;*/
   height:60px;
   padding:5px 8px;
   margin-left:7px;
