--- a/css/style.css
+++ b/css/style.css
@@ -271,12 +271,18 @@ body{
 }
 .objects-one{
 	margin-bottom:25px;
+	overflow: hidden;
+	border-top: 3px solid #124b99;
+	padding: 5px 0;
+	border-bottom: 1px solid #124b99;
 }
 
 .objects-one>div{
-	height:137px;
-	border-top:3px solid #124b99;
-	border-bottom: 1px solid #124b99;
+	/*height: 137px; */
+	width: 49%;
+	float: left;
+	/* border-top: 3px solid #124b99; */
+	/* border-bottom: 1px solid #124b99; */
 }
 .car-description {
     color: #231f20;
@@ -295,6 +301,7 @@ body{
 	background:url('../img/fire-carousel1.png') no-repeat;
 	position:absolute;
 	width:66px;
+	z-index: 1;
 	height:42px;
 }
 .car-description p {
