--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ body{
     color: #2563b7;
     font-size: 18px;
     margin-top: 30px;
+	margin-bottom: 30px;
 }
 .objects-one{
 	margin-bottom:25px;
@@ -309,4 +310,11 @@ body{
 	vertical-align: middle;
 	height: 137px;
 	padding-left: 25px;
+}
+.about-main {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 14px;
+    line-height: 1.3;
+    color: #000;
 }
