--- a/css/style.css
+++ b/css/style.css
@@ -312,9 +312,42 @@ body{
 	padding-left: 25px;
 }
 .about-main {
-    width: 80%;
+    width: 74%;
     margin: 0 auto;
     font-size: 14px;
     line-height: 1.3;
     color: #000;
+}
+.parts-desc {
+    color: #000;
+    font-size: 13px;
+    padding: 15px 60px 10px 0;
+}
+
+.row.our-parts .col-lg-4 {
+    min-height: 170px;
+    margin-top: 10px;
+}
+
+.main-form {
+    width: 850px;
+    margin: 0 auto;
+}
+
+.top-main-form {
+    height: 40px;
+    background: #2563b7;
+}
+
+#center-form label {
+    width: 146px;
+    display: block;
+    margin-bottom: 22px;
+}
+
+#center-form input,#center-form textarea {
+    margin-left: 150px;
+    margin-top: -37px;
+    float: left;
+    /* margin-top: 0; */
 }
