--- a/css/style.css
+++ b/css/style.css
@@ -331,23 +331,83 @@ body{
 
 .main-form {
     width: 850px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 .top-main-form {
     height: 40px;
     background: #2563b7;
+    color: #fff;
+    padding: 10px 26px;
+    font-size: 16px;
 }
 
 #center-form label {
     width: 146px;
     display: block;
-    margin-bottom: 22px;
+    padding-left: 30px;
+    font-weight: 200;
+    margin-bottom: 20px;
 }
 
 #center-form input,#center-form textarea {
     margin-left: 150px;
-    margin-top: -37px;
+    margin-top: -48px;
     float: left;
-    /* margin-top: 0; */
+    width: 74%;
+}
+
+#center-form input {
+    height: 33px;
+}
+
+#center-form textarea {
+    height: 60px;
+}
+
+#center-form {
+    padding: 20px;
+}
+.middle-form {
+    padding: 25px 0 30px;
+    margin: 10px 0;
+    border: 1px solid #789ed1;
+	background: #f3f2f2;
+}
+
+.top-main-form>input[type="submit"] {
+    margin: 0!important;
+    margin-left: -3px!important;
+    width: 100px!important;
+    border: none;
+    background: none;
+    font-size: 16px;
+    height: 24px!important;
+    position: relative;
+}
+#form-top-submit:before {
+    content: 'red';
+	width:20px;
+	height:20px;
+}
+.footer {
+    height: 100px;
+    background: #2563B7;
+}
+.footer-row {
+    width: 870px;
+    margin: 0 auto;
+    height: 100px;
+}
+.footer-row>div {
+    padding-left: 0;
+    color: #fff;
+    line-height: 1.3;
+    padding-top: 15px;
+    font-size: 15px;
+}
+.footer-row .col-lg-2 {
+    text-align: right;
+    padding-right: 0;
+	padding-top: 40px;
 }
