--- a/css/add-responce.css
+++ b/css/add-responce.css
@@ -38,7 +38,9 @@
 		display: none;
 	}
 	.top-email {
-    display: none;
+    display: inline-block;
+    margin-top: 100px;
+    margin-left: -99%;
 	}
 
 	.top-phone {
