--- a/css/add-responce.css
+++ b/css/add-responce.css
@@ -35,7 +35,8 @@
 	}
 
 	.obr-main-right img {
-		display: none;
+		/* display: none; */
+		margin-top:9px;
 	}
 	.top-email {
     display: inline-block;
@@ -56,7 +57,7 @@
 		margin-left: 30px;
 	}
 		.obr-main-center p {
-		width: 500px;
+		/* width: 500px; */
 	}
 		.car-description-three {
 		padding: 5px;
@@ -68,4 +69,114 @@
 		.main-form {
 		width: 85%;
 	}
+}
+
+@media screen and (min-device-width: 981px) {
+	#ddmenu ul {
+		height:72px;
+	}
+}
+
+
+@media (max-width: 980px){
+	.right-top-menu {
+    display: block;
+    position: relative;
+    margin-top: 3px;
+    float: none;
+	width: 100%;
+    padding: 10px 20px;
+    z-index: 2;
+    background: #164C95;
+    overflow: hidden;
+	}
+
+	.right-top-menu li {
+		float: left;
+		margin-bottom: 7px;
+		margin-top: 7px;
+		margin-right: 25px;
+	}
+	#jq-dropdown-1 {
+		width: 100%;
+		padding: 0;
+	}
+	#ddmenu {
+		position: static;
+		z-index: 8;
+	}
+	#ddmenu ul {
+		height:292px;
+	}
+	#ddmenu ul li {
+		display: block;
+		width: 100%;
+		background: #164C95;
+		border-bottom: 1px dotted #C2BABA;
+		margin: 0;
+		padding: 5px 10px 0;
+	}
+	#ddmenu ul li.separ {
+		display: none;
+	}
+		.sub-ddd>div {
+		width: 100%!important;
+		padding: 0;
+	}
+	.but-close {
+		margin-top: 45px;
+	}
+}
+
+@media (max-width: 979px){
+	.footer-row {
+    width: 100%;
+	}
+	.top-search form {
+    display: none;
+	}
+
+	.top-search p {
+		width: auto;
+	}
+
+	.top-search {
+		padding-top: 45px;
+	}
+
+	.top-address {
+		margin-top: 52px;
+	}
+
+	.top-email {
+		margin-top: 91px;
+		margin-left: -100%;
+		display:none;
+	}
+		.footer-row>div {
+		padding: 20px 40px!important;
+	}
+		.tp-2 {
+		margin-left: 70px;
+		top: -44px;
+		width: 150px;
+		position: relative;
+	}
+
+	.top-phone-up {
+		margin-left: -56px;
+	}
+		.top-phone {
+		width: 100%;
+		/* padding-right: 60px!important; */
+		margin-left: -60px;
+	}
+
+	.top-phone span {
+		position: relative!important;
+		padding: 0;
+		margin: 0;
+		display: inline-block;
+	}
+	
 }
