--- a/css/style.css
+++ b/css/style.css
@@ -154,9 +154,9 @@ body{
   position: absolute;
   top: 35px;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   width: 100%;
-  height:72px;
+  /* height:72px; */
   background: #2563b7;
   display: none;
   margin: 0;
@@ -245,6 +245,11 @@ body{
 	/* height:93px; */
 	color:#dae9fc;
 }
+
+.obr-main-center p{
+	width:100%;
+}
+
 .obr1{	
 	font-size: 12px;
     text-transform: uppercase;
@@ -354,7 +359,8 @@ body{
     margin-left: 150px;
     margin-top: -48px;
     float: left;
-    width: 74%;
+    width: 77%;
+	border: 1px solid #A0B7D7
 }
 
 #center-form input {
@@ -379,7 +385,7 @@ body{
     margin: 0!important;
     margin-left: -3px!important;
     width: 100px!important;
-    border: none;
+    border: none!important;
     background: none;
     font-size: 16px;
     height: 24px!important;
@@ -403,7 +409,7 @@ body{
     padding-left: 0;
     color: #fff;
     line-height: 1.3;
-    padding-top: 15px;
+    padding-top: 30px;
     font-size: 15px;
 }
 .footer-row .col-lg-2 {
