--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 body{
 	font-family:arial;
+	background-color: #f8f8f8;
 }
-
+.clear {
+    clear: both;
+}
 .top-up{
 	background:#f2f8ff;
 	overflow-x: hidden;
@@ -456,4 +459,279 @@ body{
     background-position: 10px 10px;
     background-color: #2563b7;
     min-height: 180px;
+}
+.page-content{
+	min-height: 600px;
+	padding-top:100px;
+	padding-bottom:40px;
+}
+/* .page-content .row {
+    width: 95%;
+    margin: 0 auto;
+} */
+.page-content h1{
+	color:#2563b7;
+	font-size:33px;
+}
+.crumps{
+	color:#000;
+	font-size:14px;
+}
+.contacts-info {
+	width:85%;
+	margin-left:3%;
+	color:#000;
+	font-size:14px;
+}
+.contacts-info h2{
+	font-size:26px;
+	
+}
+.contacts-map{
+	position:relative;
+	margin-top:30px;
+	margin-bottom:35px;
+	
+}
+.content-color-zag {
+    background: #2563b7;
+    text-align: center;
+    color: #fff!important;
+    padding: 15px 0;
+    font-size: 19px!important;
+    margin-bottom: 30px;
+	margin-top: -60px;
+}
+.left-license {
+    padding-left: 15px;
+	list-style:none;
+}
+.left-license li {
+    margin-bottom: 15px;
+}
+.active-license a {
+    color: #164C95;
+    font-weight: 600;
+}
+.license-img-1 img,.license-img-2 img {
+    max-width: 100%;
+}
+.left-license p {
+    color: #000;
+}
+.license-img-1{
+    margin-bottom: 65px;
+}
+h1.partners-zag {
+    color: #2563b7;
+    font-size: 18px;
+    text-align: center;
+	margin-bottom: 30px;
+}
+.partners-content {
+    overflow: hidden;
+    padding-top: 30px;
+}
+.partners-content>div {
+    min-height: 260px;
+	margin-left:0!important;
+	margin-right:0!important;
+}
+.left-sidebar {
+    padding-left: 0;
+}
+.left-sidebar-ul {
+    list-style: none;
+    font-size: 14px;
+	padding-left: 0;
+}
+
+.left-sidebar-ul li {
+    margin-bottom: 12px;
+}
+.right-sidebar>div>div {
+    margin-bottom: 40px;
+	padding-left: 0;
+    padding-right: 40px;
+}
+.right-sidebar h3 {
+    margin-bottom: 30px;
+}
+
+p.partners-item-decription {
+    margin-bottom: 30px;
+}
+
+.right-sidebar a {
+    text-decoration: underline;
+    font-size: 13px;
+}
+
+.right-sidebar a:hover {
+    text-decoration: none;
+}
+
+.left-sidebar-ul li {
+    font-size: 14px;
+}
+.right-sidebar-uslug {
+    font-size: 14px;
+    color: #000;
+}
+.crumps-bottom {
+    margin-top: 60px;
+	min-height: 0px!important;
+}
+
+.crumps-bottom a {
+    text-decoration: underline;
+    margin-right: 7px;
+}
+
+.crumps-bottom a:hover {
+    text-decoration: none;
+}
+.right-sidebar-uslug h3 {
+    margin-top: 30px;
+    margin-bottom: 23px;
+}
+.right-sidebar-uslug ul li:before {
+    content: "_";
+    position: relative;
+    margin-right: 9px;
+    top: -7px;
+}
+.works-items {
+    margin-top: 40px;
+    overflow: hidden;
+}
+
+.work-item {
+    display: inline-block;
+    float: left;
+	margin-bottom: 35px;
+}
+.work-item.col-lg-3.col-md-3.col-sm-6.col-xs-12>div {
+   /*  width: 100%; */
+}
+.right-sidebar-uslug ul {
+    list-style: none;
+}
+.about-links {
+    margin-top: 30px;
+    font-size: 18px;
+}
+
+.about-links a {
+    color: #2563b7;
+    margin-right: 25px;
+    display: inline-block;
+}
+
+.about-links a.activ {
+    text-decoration: underline;
+}
+.page-content.container.about-container {
+/*     width: 1080px;
+    margin: 0 auto; */
+}
+.about-container ul li:before {
+    content: "_";
+    position: relative;
+    margin-right: 9px;
+    top: -7px;
+}
+
+.about-container ul {
+    list-style: none;
+}
+.work-item-description {
+    /* float: left;*/
+    position: relative;
+    height: 80px;
+	padding:0;
+    /* padding: 2px 10px; */
+    margin-top: -80px;
+    color: #fff;
+   /*  width: 99.81%; */
+}
+
+.work-item-description p {
+    padding: 5px 7px;
+    height: 100%;
+    display: block;
+	color:#fff;
+    width: 100%;
+    font-size: 13px;
+    background: #2563B7;
+}
+.work-item-link {
+    /* width: 90%; */
+    display: block;
+	transition:0.5s;
+}
+.work-item-link:hover {
+    opacity:0.86;
+	transition:0.5s;
+	text-decoration:none;
+}
+a.work-item-link img {
+    width: 100%;
+    max-width: 100%;
+}
+.row.work-description {
+    width: 70%;
+    margin: 100px auto 20px;
+    color: #000;
+    font-size: 14px;
+    line-height: 1.4;
+}
+
+.techb h1{
+	text-align:left;
+	margin-left: 15px;
+}
+}
+.tech-description {
+    width: 80%;
+	margin-top: 60px;
+	margin-bottom: 70px;
+}
+.tech-item-description {
+    height: 80px;
+    background: #2563B7;
+    color: #fff;
+}
+
+.tech-item-description p {
+    padding: 7px 12px 1px;
+    font-size: 14px;
+    margin-bottom: 4px;
+}
+.tech-item-description span {
+    font-size: 12px;
+    padding: 2px 12px;
+    display: block;
+    line-height: 1;
+}
+.tech-item-link {
+    display: block;
+	transition:0.5s;
+}
+.tech-item-link:hover {
+    opacity:0.85;
+	text-decoration:none;
+	transition:0.5s;
+}
+
+.tech-item-link img {
+    width: 100%;
+    max-width: 100%;
+}
+.tech-description {
+    width: 80%;
+    margin: 50px 0 60px;
+    color: #000;
+    font-size: 14px;
+    line-height: 1.4;
 }
